# kannon.rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release-plz.yaml
.proto/kannon/mailer/apiv1/: mailerapiv1.proto
.proto/kannon/mailer/types/: email.proto  send.proto
src/: lib.rs
