[package]
name = "kannon_mail"
description = "Rust client library for kannon.email"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/marcobacis/kannon.rs"


[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
tonic = { version = "0.13", features = ["prost", "tls-ring", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
base64 = "0.22"
thiserror = "1"
anyhow = "1"

[build-dependencies]
tonic-build = "0.13"